@@ -1,5 +1,11 @@
 2016-09-22  Edward Jones  <ed.jones@embecosm.com>
 
+	 * include/mageec/Database.h (DatabaseTransaction): Rename to
+	 SQLTransaction.
+	 * lib/Database.cpp: Rename DatabaseTransactions to SQLTransaction
+
+2016-09-22  Edward Jones  <ed.jones@embecosm.com>
+
 	* include/mageec/Util.h (Metric): Remove type.
 	* include/mageec/Types.h (metricToString stringToMetric):
 	Remove functions.
